[package]
name = "ngen_nsl"
version = "0.1.0"
edition = "2021"
authors = ["Spektro Audio <contact@spektroaudio.com>"]
homepage = "https://github.com/icaroferre/ot_utils"
repository = "https://github.com/icaroferre/ot_utils"
categories = ["multimedia", "multimedia::encoding"]
description = "Library designed for generating NSL (NGEN Scripting Language) scripts for the Spektro Audio NGEN."
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"